--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "4.0.3",
     "react-scroll": "^1.7.16",
     "react-sortable-hoc": "^2.0.0",
     "react-window": "^1.8.5",
@@ -138,7 +138,8 @@
     "@graphql-codegen/typescript": "^1.17.8",
     "@graphql-codegen/typescript-operations": "^1.17.8",
     "@types/webpack-env": "^1.15.0",
-    "react-app-rewire-less": "^2.1.3"
+    "react-app-rewire-less": "^2.1.3",
+    "react-error-overlay": "^6.0.9"
   },
   "eslintConfig": {
     "extends": [
